Add newer Partner logic

--- a/force-app/main/featurePartner/classes/domain/IPartners.cls
+++ b/force-app/main/featurePartner/classes/domain/IPartners.cls
@@ -1,3 +1,4 @@
 public interface IPartners extends IApplicationSObjectDomain {
-    Map<Id, Boolean> validateRegion();
+    Map<Id, Boolean> validateEmail();
+    Map<Id, Boolean> validateNotBlankExternalId();
 }
